# fmp-mcp

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
fmp/: AGENT_PROMPTING_GUIDE.md  API_REFERENCE.json  README.md  __init__.py  cache.py  client.py  estimate_store.py  estimates_client.py  exceptions.py  pyproject.toml  quality_signals.py  registry.py  server.py
fmp/_shared/: fmp_helpers.py
fmp/examples/: README.md  analyze_bank_balance_sheets.py  analyze_chip_stocks.py  balance_sheet_analysis.py  dividend_analysis.py  fcf_analysis.py  reit_dividend_comparison.py  test_fmp_search.py  treasury_yield_analysis.py
fmp/tests/: test_transcript_writer.py
fmp/tools/: __init__.py  _file_output.py  _helpers.py  aliases.py  estimates.py  etf_funds.py  fmp_core.py  insider.py  institutional.py  market.py  news_events.py  peers.py  screening.py  stock_fundamentals.py  technical.py  transcripts.py
