[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmp-mcp"
version = "0.3.3"
description = "MCP server for Financial Modeling Prep - 19 tools for market data via Claude"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "pandas>=3.0,<4",
    "pyarrow>=23.0,<24",
    "python-dotenv>=1.0,<2",
    "fastmcp>=3.1,<4",
    "zstandard>=0.23,<1",
]

[project.optional-dependencies]
estimates = ["psycopg2-binary"]

[project.scripts]
fmp-mcp = "fmp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["fmp"]
exclude = ["fmp/compat.py", "fmp/fx.py", "fmp/scripts/"]

[tool.hatch.build.targets.sdist]
include = ["fmp/", "pyproject.toml", "README.md", "LICENSE"]
exclude = ["fmp/compat.py", "fmp/fx.py", "fmp/scripts/"]
